--- a/templates/pages/main-blocks/projects.html
+++ b/templates/pages/main-blocks/projects.html
@@ -5,7 +5,7 @@
     <div id="projects-slider">
         <div id="projects">
             <div id='eo' class="project active">
-                <img src="{% static 'img/main-page/eo.png' %}">
+                <img src="{% static 'img/main-page/projects/eo.png' %}">
                 <div class="project-content">
                     <h2 class="white">Empowerment Online</h2>
                     <p>
@@ -18,11 +18,11 @@
                         affordable and accessible solutions to start
                         living their very best lives, ever.
                     </p>
-                    <button>LEARN MORE</button>
+                    <button><a href="https://empowerment.dreamsites.io/">LEARN MORE</a></button>
                 </div>
             </div>
             <div id='voh' class="project">
-                <img src="{% static 'img/main-page/voh.png' %}">
+                <img src="{% static 'img/main-page/projects/voh-light.png' %}">
                 <div class="project-content">
                     <h2 class="white">Voices of Hope</h2>
                     <p>
@@ -35,7 +35,7 @@
                         oppressed and struggling true trauma, within
                         the family law system in the United States.
                     </p>
-                    <button>LEARN MORE</button>
+                    <button><a href="https://voicesofhope-nqhlj.ondigitalocean.app/">LEARN MORE</a></button>
                 </div>
             </div>
         </div>
