--- a/static/css/style.css
+++ b/static/css/style.css
@@ -106,8 +106,7 @@ header img {width: 25%;}
 .project {display:flex; overflow: hidden; width: 0;}
 .active {width: 100%;}
 
-.project img {width:55%;}
-
+.project img {width:350px;}
 .project-content {
     display:flex;
     flex-direction: column;
@@ -121,6 +120,7 @@ header img {width: 25%;}
     border: none;
     padding: 2%;
 }
+.project-content a {text-decoration: none;}
 
 #next-btn {border: none; background-color: transparent; width: 15%;}
 #next-btn img {width: 100%;}
@@ -143,7 +143,7 @@ header img {width: 25%;}
     background-color: #E7E6E2;
 }
 
-
+/* Staff */
 #staff {
     background-image: url(../img/main-page/staff.png);
     background-size: cover;
@@ -156,6 +156,7 @@ header img {width: 25%;}
     font-size: 20px;
 }
 
+/* Contact Us */
 #contact-us {
     padding: 5%;
     background-color: #494949;
