--- a/static/css/style_min.css
+++ b/static/css/style_min.css
@@ -1,1 +1,43 @@
-@media screen and (max-width: 950px) { }
+@media screen and (max-width: 950px) {
+    #up-btn {width:60px; height:60px;}
+
+    #main-page {padding: 5% 40% 5% 5%;}
+
+    #who-we-are {padding: 25% 40% 5% 5%;}
+
+    #projects-page h1 {font-size: 130px;}
+    .project-content p {font-size: 10px;}
+
+    #next-btn {width: 10%;}
+}
+
+@media screen and (max-width: 768px) {
+    #projects {height: 300px;}
+    .project img {width: 300px;}
+    .project-content {}
+}
+
+@media screen and (max-width: 425px) {
+    #main-page {padding: 5%;}
+
+    #who-we-are {padding: 5%;}
+
+    #sections {flex-direction: column;}
+    #sections button {width: 100%;}
+
+    #projects-page h1 {font-size: 70px;}
+    .project {flex-direction: column;}
+    .project img {display: none;}
+
+    #presenter-list {flex-direction: column;}
+    #presenters h1 {font-size: 35px;}
+
+    #staff {padding: 5%;}
+}
+
+@media screen and (max-width: 375px) {
+    #main-page h1 {font-size: 40px;}
+
+    #staff h1 {text-align: center;}
+    #staff ul {text-align: center;}
+}
