--- a/templates/pages/main-blocks/projects.html
+++ b/templates/pages/main-blocks/projects.html
@@ -35,7 +35,11 @@
                         oppressed and struggling true trauma, within
                         the family law system in the United States.
                     </p>
-                    <button><a href="https://voicesofhope-nqhlj.ondigitalocean.app/">LEARN MORE</a></button>
+                    <button>
+                        <a href="https://voicesofhope-nqhlj.ondigitalocean.app/">
+                            LEARN MORE
+                        </a>
+                    </button>
                 </div>
             </div>
         </div>
