--- a/templates/pages/main-blocks/who-we-are.html
+++ b/templates/pages/main-blocks/who-we-are.html
@@ -1,5 +1,5 @@
 <div id="who-we-are" class="block">
-    <h1 class="gray">Empowerment Community</h1>
+    <h1 class="white">Empowerment Community</h1>
     <p id="who-we-are-text">
         The purpose of The Empowerment Community
         is to create a network of inspiring resources
