--- a/templates/pages/main-blocks/main-page.html
+++ b/templates/pages/main-blocks/main-page.html
@@ -1,6 +1,9 @@
 <div id="main-page">
     <h1 class="white">Empowerment Community</h1>
-    <h3 class="white">Get to know our community that is making people's lives better.</h3>
+    <h3 class="white">
+        Meet our community that provides people
+        resources to help them live their best lives.
+    </h3>
     <div id="sections">
         <button class="sections-btn">ABOUT COMMUNITY</button>
         <button class="sections-btn">PROJECTS</button>
