--- a/templates/base_part/header.html
+++ b/templates/base_part/header.html
@@ -1,5 +1,11 @@
 {% load static %}
 
-<header>
+<header id="header">
     <a href="/"><img src="{% static 'img/logo/white.png' %}"></a>
+    <div id="sections">
+        <button class="sections-btn white">PROJECTS</button>
+        <button class="sections-btn white">ONLINE COURSES PRESENTERS</button>
+        <button class="sections-btn white">ADMINISTRATIVE STAFF</button>
+        <button class="sections-btn white">CONTACT US</button>
+    </div>
 </header>
