--- a/templates/pages/main-blocks/contact-us.html
+++ b/templates/pages/main-blocks/contact-us.html
@@ -1,4 +1,4 @@
-<div id="contact-us">
+<div id="contact-us" class="block">
     <h1>LET'S BE IN TOUCH</h1>
     <p>WE WILL BE A GLAD IF YOU WRITE YOUR FEEDBACK.</p>
     <form method="post">
