--- a/templates/pages/main-blocks/main-page.html
+++ b/templates/pages/main-blocks/main-page.html
@@ -1,13 +1,19 @@
 <div id="main-page">
     <h1 class="white">Empowerment Community</h1>
-    <h3 class="white">
+    <h3 class="brown">
         Meet our community that provides people
         resources to help them live their best lives.
     </h3>
-    <div id="sections">
-        <button class="sections-btn">ABOUT COMMUNITY</button>
-        <button class="sections-btn">PROJECTS</button>
-        <button class="sections-btn">ONLINE COURSES PRESENTERS</button>
-        <button class="sections-btn">ADMINISTRATIVE STAFF</button>
-    </div>
+    <p class="brown">
+        The purpose of The Empowerment Community
+        is to create a network of inspiring resources
+        that are easily accessible and shareable
+        for anyone in the world to know they are
+        not alone. Anyone can join our grassroots
+        movement dedicated to coming together to
+        spread hope, encouragement and the right
+        resources to help others overcome any
+        challenge, adversity or trauma to live
+        their best lives.
+    </p>
 </div>
