--- a/templates/base_part/header.html
+++ b/templates/base_part/header.html
@@ -3,7 +3,7 @@
 <header id="header">
     <a href="/"><img src="{% static 'img/logo/white.png' %}"></a>
     <div id="sections">
-        <button class="sections-btn white">PROJECTS</button>
+        <button class="sections-btn white">OUR PROJECTS</button>
         <button class="sections-btn white">ONLINE COURSES PRESENTERS</button>
         <button class="sections-btn white">ADMINISTRATIVE STAFF</button>
         <button class="sections-btn white">CONTACT US</button>
