--- a/templates/pages/main-blocks/projects.html
+++ b/templates/pages/main-blocks/projects.html
@@ -1,5 +1,4 @@
 {% load static %}
-
 <div id="projects-page" class="block">
     <h1 class="white">Projects</h1>
     <div id="projects-slider">
@@ -18,7 +17,7 @@
                         affordable and accessible solutions to start
                         living their very best lives, ever.
                     </p>
-                    <button><a href="https://empowerment.dreamsites.io/">LEARN MORE</a></button>
+                    <a href="https://empowerment.dreamsites.io/">LEARN MORE</a>
                 </div>
             </div>
             <div id='voh' class="project">
@@ -35,11 +34,7 @@
                         oppressed and struggling true trauma, within
                         the family law system in the United States.
                     </p>
-                    <button>
-                        <a href="https://voicesofhope-nqhlj.ondigitalocean.app/">
-                            LEARN MORE
-                        </a>
-                    </button>
+                    <a href="https://voicesofhope-nqhlj.ondigitalocean.app/">LEARN MORE</a>
                 </div>
             </div>
         </div>
