--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,17 +18,17 @@ header {
 header a {
     width: 25%;
 }
-header img {width: 50%;}
+header img {width: 75%;}
 #sections {
-    width: 70%;
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
 }
 #sections button {
     font-size: 15px;
-    padding: 3%;
-    margin: 1% 2% 1% 0;
+    padding: 1% 2%;
+    text-align: start;
     background-color: transparent;
     border: none;
 }
@@ -69,11 +69,11 @@ header img {width: 50%;}
 /* Projects */
 #projects-page {
     background-color: #D0BAB0;
-    padding: 10% 5%;
+    padding: 15% 5%;
     color: white;
 }
 #projects-page h1 {
-    font-size: 150px;
+    font-size: 200px;
     font-weight: 400;
     margin: 0;
     position: absolute;
@@ -91,27 +91,36 @@ header img {width: 50%;}
 
 .project {
     opacity: 0;
-    display: flex;
     width: 0;
-    transition: opacity 1s ease}
-.project.active {width: 100%; opacity: 1;}
+    display: flex;
+    transition: opacity 1s ease
+}
+.project.active {
+    opacity: 1;
+    width: 100%;
+
+}
 
 .project img {width:350px;}
 .project-content {
+    width: 50%;
+    padding-left: 5%;
     display:flex;
     flex-direction: column;
-    padding: 0 5%;
     justify-content: space-between;
 }
 .project-content h2 {margin-top: 0;}
-.project-content p {margin-top: 0; font-size: 12px;}
-.project-content button {
-    background-color: #E7E6E2;
-    border: none;
+.project-content p {margin-top: 0; font-size: 14px;}
+
+.project-content a {
     padding: 2%;
     width: 40%;
+    background-color: #E7E6E2;
+    border: none;
+    text-decoration: none;
+    text-align: center;
+    color: black;
 }
-.project-content a {text-decoration: none; color: black;}
 
 #next-btn {border: none; background-color: transparent; width: 15%;}
 #next-btn img {width: 100%;}
@@ -149,7 +158,7 @@ header img {width: 50%;}
 
 /* Contact Us */
 #contact-us {
-    padding: 5%;
+    padding: 5% 10%;
     background-color: #494949;
     color: white;
 }
@@ -160,7 +169,7 @@ form {
 }
 form div {display: flex;}
 input {
-    margin: 2%;
+    margin: 2% 4% 2% 0;
     width: 35%;
     border-width: 0 0 1px 0;
     border-color: white;
@@ -175,7 +184,7 @@ input::placeholder {
 textarea {
     border: none;
     background-color: transparent;
-    margin: 2%;
+    margin-top: 2%;
     width: 100%;
     font-family: "Cinzel", sans-serif;
     color: white;
@@ -185,8 +194,8 @@ textarea::placeholder {
     font-family: "Cinzel", sans-serif;
 }
 form button {
-    margin: 2%;
-    width: 25%;
+    margin: 2% 0;
+    width: 35%;
 }
 
 
