--- a/static/css/style.css
+++ b/static/css/style.css
@@ -77,7 +77,7 @@ header img {width: 75%;}
     font-weight: 400;
     margin: 0;
     position: absolute;
-    transform: translateY(-60%);
+    transform: translateY(-70%);
     z-index: 1;
 }
 #projects-slider {
@@ -102,6 +102,7 @@ header img {width: 75%;}
 }
 
 .project img {width:350px;}
+
 .project-content {
     width: 50%;
     padding-left: 5%;
@@ -109,9 +110,8 @@ header img {width: 75%;}
     flex-direction: column;
     justify-content: space-between;
 }
-.project-content h2 {margin-top: 0;}
+.project-content h2 {font-size: 35px; margin-top: 0;}
 .project-content p {margin-top: 0; font-size: 14px;}
-
 .project-content a {
     padding: 2%;
     width: 40%;
