--- a/templates/pages/main-blocks/main-page.html
+++ b/templates/pages/main-blocks/main-page.html
@@ -1,5 +1,5 @@
 <div id="main-page">
-    <h1 class="white">Empowerment Community</h1>
+    <h1 class="brown">Empowerment Community</h1>
     <h3 class="brown">
         Meet our community that provides people
         resources to help them live their best lives.
