--- a/templates/pages/main-blocks/presenters.html
+++ b/templates/pages/main-blocks/presenters.html
@@ -1,24 +1,26 @@
+{% load static %}
+
 <div id="presenters" class="block">
     <h1>Online Courses Presenters</h1>
     <div id="presenter-list">
         <div class="presenter">
-            <h2>Lilly J. Landikusic </h2>
-            <img src="" alt="">
+            <h2>Lilly J.<br>Landikusic </h2>
+            <img src="{% static 'img/main-page/ol/1.png' %}" alt="">
             <p>Licensed Marriage and Family Therapist teach at the 'Hope Project' course.</p>
         </div>
         <div class="presenter">
             <h2>Kevin</br>Kelly</h2>
-            <img src="" alt="">
+            <img src="{% static 'img/main-page/ol/1.png' %}" alt="">
             <p>Licensed Marriage and Family Therapist teach at the 'Hope Project' course.</p>
         </div>
         <div class="presenter">
             <h2>Desiree<br>Surname</h2>
-            <img src="" alt="">
+            <img src="{% static 'img/main-page/ol/1.png' %}" alt="">
             <p>Licensed Marriage and Family Therapist teach at the 'Hope Project' course.</p>
         </div>
         <div class="presenter">
             <h2>Hena<br>Surname</h2>
-            <img src="" alt="">
+            <img src="{% static 'img/main-page/ol/1.png' %}" alt="">
             <p>Licensed Marriage and Family Therapist teach at the 'Hope Project' course.</p>
         </div>
     </div>
