--- a/templates/pages/main-blocks/contact-us.html
+++ b/templates/pages/main-blocks/contact-us.html
@@ -1,12 +1,16 @@
 <div id="contact-us" class="block">
-    <h1>LET'S BE IN TOUCH</h1>
-    <p>WE WILL BE A GLAD IF YOU WRITE YOUR FEEDBACK.</p>
-    <form method="post">
-        {% csrf_token %}
+    <div id="contact-us-title" class="white">
         <div>
-            <input name='name' placeholder="NAME">
-            <input name='email' placeholder="EMAIL">
+            <h1>LET'S BE IN TOUCH</h1>
+            <p>WRITE TO US IF YOU HAVE QUESTIONS OR JUST LIKE THAT.</p>
+            <p>HERE YOU ARE ALWAYS WELCOME.</p>
         </div>
+        <a href="mailto: empowermentonlline@gmail.com" class="white">empowermentonlline@gmail.com</a>
+    </div>
+    <form method="post" id="contact-us-form">
+        {% csrf_token %}
+        <input name='name' placeholder="NAME">
+        <input name='email' placeholder="EMAIL">
         <textarea name="feedback" cols="30" rows="10" placeholder="WRITE YOUR FEEDBACK"></textarea>
         <button>Send</button>
     </form>
